@@ -1,3 +1,7 @@
+2009-02-04 TualatriX <tualatrix@gmail.com>
+
+	* templatetags/comment.py: Make the Edit displayed for Admin only.
+
 2009-01-31 TualatriX <tualatrix@gmail.com>
 
 	* pulog/***: Rewrite the pagination, more powerful!
